--- a/views/Chat.ejs
+++ b/views/Chat.ejs
@@ -316,15 +316,19 @@ rel="stylesheet"
 
     // Add the 'active' class to the clicked list item
     selectedStudent.classList.add('active');
+
+
+    let studentRoom = 'supervisor_<%= user.ID %>_student_<%=studentId %>';
+                        socket.emit('join room', { room: studentRoom });
   }
 });
 
             
                       // Join the supervisor's room for each student
-                      <% students.forEach((student) => { %>
-                        const studentRoom = 'supervisor_<%= user.ID %>_student_<%= student.ID %>';
-                        socket.emit('join room', { room: studentRoom });
-                      <% }) %>
+                      // <% students.forEach((student) => { %>
+                      //   let studentRoom = 'supervisor_<%= user.ID %>_student_<%= student.ID %>';
+                      //   socket.emit('join room', { room: studentRoom });
+                      // <% }) %>
             
                       
                       // Handle received chat messages
@@ -369,16 +373,12 @@ rel="stylesheet"
               </div>
             </div>
 
-            </div>
-            
-        </div>
-      </div>
-
+          
 
 
 <script
   type="text/javascript"
   src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"></script>
-      <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
