project display updated

--- a/views/HODDashboard.ejs
+++ b/views/HODDashboard.ejs
@@ -74,32 +74,33 @@
                 <div class="position-sticky">
                   <div class="list-group list-group-flush mx-3 mt-4">
                     <a
-                      href="/HOD"
-                      class="list-group-item list-group-item-action py-2 ripple"
-                      aria-current="true"
-                    >
-                      <i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Main dashboard</span>
-                    </a>
-                    <a href="/HOD" class="list-group-item list-group-item-action py-2 ripple active">
-                      <i class="fas fa-chart-area fa-fw me-3"></i><span>Dashboard</span>
-                    </a>
-                    <a href="/project" class="list-group-item list-group-item-action py-2 ripple"
-                      ><i class="fas fa-building fa-fw me-3"></i><span>Project</span></a
-                    >
-                    <a href="/HOD/students" class="list-group-item list-group-item-action py-2 ripple"
-                    ><i class="fas fa-calendar fa-fw me-3"></i><span>Students</span></a
-                  >
-                    
-                    <a href="/HOD/HODapproval" class="list-group-item list-group-item-action py-2 ripple"
-                    ><i class="fas fa-lock fa-fw me-3"></i><span>Approval</span></a
-                  >
-                    <a href="/supervisor/Report" class="list-group-item list-group-item-action py-2 ripple"
-                      ><i class="fas fa-lock fa-fw me-3"></i><span>Report</span></a
-                    >
-                    
-                    <a href="#" class="list-group-item list-group-item-action py-2 ripple">
-                      <i class="fas fa-chart-pie fa-fw me-3"></i><span>LogOut</span>
-                    </a>
+              href="/HOD"
+              class="list-group-item list-group-item-action py-2 ripple"
+              aria-current="true"
+            >
+              <span>Main dashboard</span>
+            </a>
+            <a href="/HOD" class="list-group-item list-group-item-action py-2 ripple active">
+              <i class=" fa fa-light fa-gauge me-3"></i><span>Dashboard</span>
+            </a>
+            <a href="/HOD/thesis" class="list-group-item list-group-item-action py-2 ripple"
+              ><i class="fa fa-book fa-fw me-3"></i><span>Thesis</span></a
+            >
+            <a href="/HOD/students" class="list-group-item list-group-item-action py-2 ripple"
+            ><i class="fa fa-duotone fa-users me-3"></i><span>Students</span></a
+          >
+            
+            <a href="/HOD/HODapproval" class="list-group-item list-group-item-action py-2 ripple"
+            ><i class="fas fa-lock fa-fw me-3"></i><span>Approval</span></a
+          >
+            <a href="/supervisor/Report" class="list-group-item list-group-item-action py-2 ripple"
+              ><i class="fa fa-duotone fa-marker me-3"></i><span>Report</span></a
+            >
+            
+            <a href="#" class="list-group-item list-group-item-action py-2 ripple">
+              <i class=" fa fa-light fa-right-from-bracket me-3"></i><span>LogOut</span>
+            </a>
+           
                    
                   </div>
                 </div>
@@ -180,38 +181,38 @@
 
  
     <div class="row">
-      <div class="col-4">
+      <div class="col-md-4 m-1">
           <a href="/HOD/students" class="card" style="width: 15rem; height: 15rem;">
-              <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top" alt="Sunset Over the Sea"/>
+              <img src="images/students.jpeg" class="card-img-top" alt="Sunset Over the Sea" style="height: 10rem;" />
               <div class="card-body">
                 <p class="card-text">Students </p>
               </div>            
           </a>
       </div>
-      <div class="col-4">
+      <div class="col-md-4 m-1">
           <a class="card" href="/HOD/thesis" style="width: 15rem; height: 15rem;">
-              <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top" alt="Sunset Over the Sea"/>
+              <img src="images/thesis.png" class="card-img-top" alt="Sunset Over the Sea"/>
               <div class="card-body">
-                <p class="card-text">Projects</p>
+                <p class="card-text">Thesis</p>
               </div>
           </a>
       </div>
     
      
   </div>
- <div class="row mt-5">
+ <div class="row mt-2 ">
    
-      <div class="col-4" >
+      <div class="col-md-4 m-1" >
         <a href="/HOD/HODapproval" class="card" style="width: 15rem; height: 15rem;" aria-disabled="true">
-            <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top" alt="Sunset Over the Sea"/>
+            <img src="images/approval.png" class="card-img-top" alt="Sunset Over the Sea" style="height: 15rem;"/>
             <div class="card-body">
               <p class="card-text">Approval </p>
             </div>
         </a>
     </div>
-      <div class="col-4">
+      <div class="col-md-4 m-1">
           <a href="/HOD/report" class="card" style="width: 15rem; height: 15rem;">
-              <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top" alt="Sunset Over the Sea"/>
+              <img src="images/report.jpeg" class="card-img-top" alt="Sunset Over the Sea" style="height: 15rem;"/>
               <div class="card-body">
                 <p class="card-text">Report </p>
               </div>
