--- a/views/HODapproval.ejs
+++ b/views/HODapproval.ejs
@@ -77,27 +77,27 @@ rel="stylesheet"
               class="list-group-item list-group-item-action py-2 ripple"
               aria-current="true"
             >
-              <i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Main dashboard</span>
+              <span>Main dashboard</span>
             </a>
-            <a href="/HOD" class="list-group-item list-group-item-action py-2 ripple active">
-              <i class="fas fa-chart-area fa-fw me-3"></i><span>Dashboard</span>
+            <a href="/HOD" class="list-group-item list-group-item-action py-2 ripple ">
+              <i class=" fa fa-light fa-gauge me-3"></i><span>Dashboard</span>
             </a>
             <a href="/HOD/thesis" class="list-group-item list-group-item-action py-2 ripple"
-              ><i class="fas fa-building fa-fw me-3"></i><span>Project</span></a
+              ><i class="fa fa-book fa-fw me-3"></i><span>Thesis</span></a
             >
             <a href="/HOD/students" class="list-group-item list-group-item-action py-2 ripple"
-            ><i class="fas fa-calendar fa-fw me-3"></i><span>Students</span></a
+            ><i class="fa fa-duotone fa-users me-3"></i><span>Students</span></a
           >
             
-            <a href="/HOD/HODapproval" class="list-group-item list-group-item-action py-2 ripple"
+            <a href="/HOD/HODapproval" class="list-group-item list-group-item-action py-2 ripple active"
             ><i class="fas fa-lock fa-fw me-3"></i><span>Approval</span></a
           >
             <a href="/supervisor/Report" class="list-group-item list-group-item-action py-2 ripple"
-              ><i class="fas fa-lock fa-fw me-3"></i><span>Report</span></a
+              ><i class="fa fa-duotone fa-marker me-3"></i><span>Report</span></a
             >
             
             <a href="#" class="list-group-item list-group-item-action py-2 ripple">
-              <i class="fas fa-chart-pie fa-fw me-3"></i><span>LogOut</span>
+              <i class=" fa fa-light fa-right-from-bracket me-3"></i><span>LogOut</span>
             </a>
            
           </div>
@@ -155,7 +155,7 @@ rel="stylesheet"
         
         <div class="btn-group">
           <button type="button" class="btn btn-danger " >
-            Logout
+            <i class=" fa fa-light fa-right-from-bracket me-3"></i>Logout
           </button>
         </div>
         
