--- a/views/Chat.ejs
+++ b/views/Chat.ejs
@@ -131,33 +131,31 @@ rel="stylesheet"
   <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
     <div class="position-sticky">
       <div class="list-group list-group-flush mx-3 mt-4">
-        <a
+       <a
           href="/student"
           class="list-group-item list-group-item-action py-2 ripple"
           aria-current="true"
         >
-          <i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Main dashboard</span>
+         <span>Main dashboard</span>
         </a>
         <a href="/supervisor" class="list-group-item list-group-item-action py-2 ripple ">
-          <i class="fas fa-chart-area fa-fw me-3"></i><span>Dashboard</span>
+          <i class=" fa fa-light fa-gauge me-3"></i><span>Dashboard</span>
         </a>
-        <a href="/project" class="list-group-item list-group-item-action py-2 ripple"
-          ><i class="fas fa-building fa-fw me-3"></i><span>Project</span></a
+        <a href="/supervisor/thesis" class="list-group-item list-group-item-action py-2 ripple"
+          ><i class="fa fa-book fa-fw me-3"></i><span>Thesis</span></a
         >
-        <a href="/supervisor/students" class="list-group-item list-group-item-action py-2 ripple "
-        ><i class="fas fa-calendar fa-fw me-3"></i><span>Students</span></a
+        <a href="/supervisor/students" class="list-group-item list-group-item-action py-2 ripple"
+        ><i class="fa fa-duotone fa-users me-3"></i><span>Students</span></a
       >
         <a href="/supervisor/students/message" class="list-group-item list-group-item-action py-2 ripple active"
-          ><i class="fas fa-users fa-fw me-3"></i><span>Messages</span></a
+          ><i class=" fa fa-brands fa-rocketchat me-3"></i><span>Messages</span></a
         >
-        <a href="/plagiarism" class="list-group-item list-group-item-action py-2 ripple"
-          ><i class="fas fa-lock fa-fw me-3"></i><span>Plagiarism</span></a
-        >
+       
         <a href="/supervisor/approval" class="list-group-item list-group-item-action py-2 ripple"
         ><i class="fas fa-lock fa-fw me-3"></i><span>Approval</span></a
       >
         <a href="/supervisor/Report" class="list-group-item list-group-item-action py-2 ripple"
-          ><i class="fas fa-lock fa-fw me-3"></i><span>Report</span></a
+          ><i class="fa fa-duotone fa-marker me-3"></i><span>Report</span></a
         >
         
         <a href="#" class="list-group-item list-group-item-action py-2 ripple">
