--- a/views/studentMessage.ejs
+++ b/views/studentMessage.ejs
@@ -116,30 +116,31 @@ rel="stylesheet"
           class="list-group-item list-group-item-action py-2 ripple"
           aria-current="true"
         >
-          <i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Main dashboard</span>
+          <span>Main dashboard</span>
         </a>
         <a href="/student" class="list-group-item list-group-item-action py-2 ripple ">
-          <i class="fas fa-chart-area fa-fw me-3"></i><span>Dashboard</span>
+          <i class=" fa fa-light fa-gauge me-3"></i></i><span>Dashboard</span>
         </a>
-        <a href="/project" class="list-group-item list-group-item-action py-2 ripple"
-          ><i class="fas fa-building fa-fw me-3"></i><span>Project</span></a
+        <a href="/student/thesis" class="list-group-item list-group-item-action py-2 ripple"
+          ><i class="fa fa-book fa-fw me-3"></i><span>Thesis</span></a
         >
         <a href="/student/myproject/<%- user.ID %>" class="list-group-item list-group-item-action py-2 ripple "
-        ><i class="fas fa-calendar fa-fw me-3"></i><span>My Project</span></a
+        ><i class="fa fa-duotone fa-book-open-reader me-3"></i></i><span>My Project</span></a
       >
         <a href="/student/message" class="list-group-item list-group-item-action py-2 ripple active"
-          ><i class="fas fa-users fa-fw me-3"></i><span>Messages</span></a
+          ><i class=" fa fa-brands fa-rocketchat me-3"></i><span>Messages</span></a
         >
         <a href="/plagiarism" class="list-group-item list-group-item-action py-2 ripple"
-          ><i class="fas fa-lock fa-fw me-3"></i><span>Plagiarism</span></a
+          ><i class=" fa fa-light fa-spell-check me-3"></i><span>Plagiarism</span></a
         >
         <a href="/studentReport" class="list-group-item list-group-item-action py-2 ripple"
-          ><i class="fas fa-lock fa-fw me-3"></i><span>Report</span></a
+          ><i class="fa fa-duotone fa-marker me-3"></i><span>Report</span></a
         >
         
         <a href="#" class="list-group-item list-group-item-action py-2 ripple">
-          <i class="fas fa-chart-pie fa-fw me-3"></i><span>LogOut</span>
+          <i class="fa fa-duotone fa-right-from-bracket me-3"></i><span>LogOut</span>
         </a>
+       
        
       </div>
     </div>
