--- a/views/studentThesis.ejs
+++ b/views/studentThesis.ejs
@@ -72,33 +72,36 @@ rel="stylesheet"
   <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
     <div class="position-sticky">
         <div class="list-group list-group-flush mx-3 mt-4">
-           <a
-              href="/HOD"
-              class="list-group-item list-group-item-action py-2 ripple"
-              aria-current="true"
-            >
-              <span>Main dashboard</span>
-            </a>
-            <a href="/HOD" class="list-group-item list-group-item-action py-2 ripple ">
-              <i class=" fa fa-light fa-gauge me-3"></i><span>Dashboard</span>
-            </a>
-            <a href="/HOD/thesis" class="list-group-item list-group-item-action py-2 ripple"
-              ><i class="fa fa-book fa-fw me-3"></i><span>Thesis</span></a
-            >
-            <a href="/HOD/students" class="list-group-item list-group-item-action py-2 ripple active"
-            ><i class="fa fa-duotone fa-users me-3"></i><span>Students</span></a
-          >
-            
-            <a href="/HOD/HODapproval" class="list-group-item list-group-item-action py-2 ripple"
-            ><i class="fas fa-lock fa-fw me-3"></i><span>Approval</span></a
-          >
-            <a href="/supervisor/Report" class="list-group-item list-group-item-action py-2 ripple"
-              ><i class="fa fa-duotone fa-marker me-3"></i><span>Report</span></a
-            >
-            
-            <a href="#" class="list-group-item list-group-item-action py-2 ripple">
-              <i class=" fa fa-light fa-right-from-bracket me-3"></i><span>LogOut</span>
-            </a>
+             <a
+          href="/student"
+          class="list-group-item list-group-item-action py-2 ripple"
+          aria-current="true"
+        >
+          <span>Main dashboard</span>
+        </a>
+        <a href="/student" class="list-group-item list-group-item-action py-2 ripple ">
+          <i class=" fa fa-light fa-gauge me-3"></i></i><span>Dashboard</span>
+        </a>
+        <a href="/student/thesis" class="list-group-item list-group-item-action py-2 ripple active"
+          ><i class="fa fa-book fa-fw me-3"></i><span>Thesis</span></a
+        >
+        <a href="/student/myproject/<%- user.ID %>" class="list-group-item list-group-item-action py-2 ripple "
+        ><i class="fa fa-duotone fa-book-open-reader me-3"></i></i><span>My Project</span></a
+      >
+        <a href="/student/message" class="list-group-item list-group-item-action py-2 ripple "
+          ><i class=" fa fa-brands fa-rocketchat me-3"></i><span>Messages</span></a
+        >
+        <a href="/plagiarism" class="list-group-item list-group-item-action py-2 ripple"
+          ><i class=" fa fa-light fa-spell-check me-3"></i><span>Plagiarism</span></a
+        >
+        <a href="/studentReport" class="list-group-item list-group-item-action py-2 ripple"
+          ><i class="fa fa-duotone fa-marker me-3"></i><span>Report</span></a
+        >
+        
+        <a href="#" class="list-group-item list-group-item-action py-2 ripple">
+          <i class="fa fa-duotone fa-right-from-bracket me-3"></i><span>LogOut</span>
+        </a>
+           
            
           </div>
     </div>
@@ -180,32 +183,25 @@ rel="stylesheet"
                           <tr>
                             <th scope="col">Name</th>
                             <th scope="col">Thesis Topic</th>
-                            <th scope="col">Status</th>
+                            <th scope="col">Year</th>
                             <th scope="col"></th>
                           </tr>
                         </thead>
                         <tbody>
                             
-                          <% listOfStudent.forEach(student => { %>
+                          <% findallstudentswithpublish.forEach(student => { %>
   <tr>
     <th scope="row"><%- student.fName%>  <%- student.lName %></th>
     <td><%- student.topic %> <span><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal<%- student.ID %>">read More</a></span></td>
-    <td id="status"><%- student.thesisStatus %></td>
+    <td id="status"><%=new Date(student.final_document[0].timestamp).getFullYear() %></td>
     <td>
-      <form action="/hod/students/publish" method="post" style="display: inline; margin-right: 5px;">
+      <form action="/hod/publish/download" method="post" style="display: inline; margin-right: 5px;">
         <input type="hidden" name="studentID" value="<%- student.ID %>">
-        <button type="submit" id="publish" class="btn btn-outline-success" name="status" value="publish" >Publish</button>
-        <button type="submit" id="retract" class="btn btn-outline-warning" nam="status" value="retract">Retract</button>
+        <button type="submit" id="download" class="btn btn-outline-success" name="status" value="download" >download</button>
+        
       </form>
     </td>
-    <script>
-      if("<%- student.thesisStatus == 'Published' %>" ){
-        document.getElementById("publish").setAttribute("disabled", true)
-      }else if("<%- student.thesisStatus == 'Retracted' %>" ){
-        document.getElementById("retract").setAttribute("disabled", true)
-
-      }
-    </script>
+    
   </tr>
   
   <!-- description modal -->
@@ -244,10 +240,9 @@ rel="stylesheet"
             
         </div>
       </div>
-      <script
+<script
   type="text/javascript"
   src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
