--- a/views/login.ejs
+++ b/views/login.ejs
@@ -48,16 +48,16 @@ rel="stylesheet"
         <form action="/login" method="post">
           
     <!-- login pill -->
-    <%- messages %>
+   <div class="span" style="color: red;"> <%- messages %></div> 
           <!-- Email input -->
           <div class="form-outline mb-4  ">
-            <input type="text" id="loginName"  name="ID" class="form-control" />
+            <input type="text" id="loginName"  name="ID" class="form-control" required />
             <label class="form-label" for="loginName">User ID</label>
           </div>
     
           <!-- Password input -->
           <div class="form-outline mb-4">
-            <input type="password" id="loginPassword" name="password" class="form-control" />
+            <input type="password" id="loginPassword" name="password" class="form-control"  required/>
             <label class="form-label" for="loginPassword">Password</label>
           </div>
     
@@ -82,7 +82,7 @@ rel="stylesheet"
     
           <!-- Register buttons -->
           <div class="text-center">
-            <p>Not a member? <a href="/register">Register</a></p>
+            <p>Not a member? <a href="/studentregister">Register</a></p>
           </div>
         </form>
       </div>
